--- a/src/react-app/package.json
+++ b/src/react-app/package.json
@@ -1,21 +1,14 @@
 {
-  "name": "react-app",
+  "name": "setepid-savingfunds",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "@testing-library/jest-dom": "^5.17.0",
-    "@testing-library/react": "^13.4.0",
-    "@testing-library/user-event": "^13.5.0",
-    "@types/jest": "^27.5.2",
-    "@types/node": "^16.18.97",
-    "@types/react": "^18.3.2",
-    "@types/react-dom": "^18.3.0",
-    "react": "^18.3.1",
-    "react-dom": "^18.3.1",
+    "bulma": "^1.0.0",
+    "react": "~18.3.1",
+    "react-dom": "~18.3.1",
+    "react-router-dom": "~6.23.1",
     "react-scripts": "5.0.1",
-    "typescript": "^4.9.5",
-    "web-vitals": "^2.1.4",
-     "react-router-dom": "^6.23.1"
+    "web-vitals": "~2.1.4"
   },
   "scripts": {
     "start": "react-scripts start",
@@ -40,5 +33,15 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "@testing-library/jest-dom": "~5.17.0",
+    "@testing-library/react": "~13.4.0",
+    "@testing-library/user-event": "~13.5.0",
+    "@types/jest": "~27.5.2",
+    "@types/node": "~16.18.97",
+    "@types/react": "~18.3.2",
+    "@types/react-dom": "~18.3.0",
+    "typescript": "~4.9.5"
   }
 }
