--- a/src/react-app/public/manifest.json
+++ b/src/react-app/public/manifest.json
@@ -1,6 +1,6 @@
 {
-  "short_name": "React App",
-  "name": "Create React App Sample",
+  "short_name": "SETEPID Fondo de Ahorro",
+  "name": "S.E.T.E.P.I.D. | Sistema de Fondo de Ahorro",
   "icons": [
     {
       "src": "favicon.ico",
