--- a/src/react-app/tsconfig.json
+++ b/src/react-app/tsconfig.json
@@ -16,11 +16,14 @@
     "module": "esnext",
     "moduleResolution": "node",
     "resolveJsonModule": true,
-    "isolatedModules": true,
+    "isolatedModules": false,
     "noEmit": true,
     "jsx": "preserve",
+    "paths": {
+      "@core/*": ["../core-lib/dist/*"]
+    },
   },
   "include": [
     "src"
-  ]
+, "../core-lib/src/domain/enums/gender.ts"  ]
 }
