--- a/src/core-lib/tsconfig.json
+++ b/src/core-lib/tsconfig.json
@@ -1,10 +1,9 @@
 {
     "compilerOptions": {
-      "outDir": "./dist",
-      "rootDir": "./src",
-      "target": "es5",
+      "target": "es6",
       "module": "commonjs",
-      "declaration": true,
+      "lib": ["es6", "dom"],
+      "outDir": "./dist",
       "strict": true,
       "esModuleInterop": true,
       "skipLibCheck": true
