--- a/src/react-app/package.json
+++ b/src/react-app/package.json
@@ -5,16 +5,18 @@
   "dependencies": {
     "bulma": "~1.0.0",
     "iconoir-react": "~7.7.0",
-    "jotai": "^2.8.0",
+    "pg": "~8.11.5",
+    "pg-hstore": "~2.3.4",
     "react": "~18.3.1",
     "react-dom": "~18.3.1",
     "react-router-dom": "~6.23.1",
     "react-scripts": "5.0.1",
+    "sequelize": "~6.37.3",
     "web-vitals": "~2.1.4",
     "zustand": "~4.5.2"
   },
   "scripts": {
-    "electron": "electron .",
+    "electron": "tsc src/Electron.ts --outDir .dist/electron && electron .dist/electron/Electron.js",
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
@@ -47,6 +49,7 @@
     "@types/node": "~16.18.97",
     "@types/react": "~18.3.2",
     "@types/react-dom": "~18.3.0",
+    "electron": "~30.0.4",
     "typescript": "~4.9.5"
   }
 }
