--- a/src/react-app/package.json
+++ b/src/react-app/package.json
@@ -12,6 +12,7 @@
     "react-router-dom": "~6.23.1",
     "react-scripts": "5.0.1",
     "sequelize": "~6.37.3",
+    "uuid": "^9.0.1",
     "web-vitals": "~2.1.4",
     "zustand": "~4.5.2"
   },
@@ -49,6 +50,7 @@
     "@types/node": "~16.18.97",
     "@types/react": "~18.3.2",
     "@types/react-dom": "~18.3.0",
+    "@types/uuid": "^9.0.8",
     "electron": "~30.0.4",
     "typescript": "~4.9.5"
   }
