Implemented API project with CQRS. Also was implemented the functionality to access to database (postgres). Many improvements on React-App and Cmd-App.

--- a/src/cmd-app/tsconfig.json
+++ b/src/cmd-app/tsconfig.json
@@ -12,6 +12,6 @@
   "include": [
     "src/**/*",
     "src/database/data/state.json",
-    "../react-app/src/core/*"
+    "../api-app/src/core/*"
   ]
 }
