--- a/src/cmd-app/package.json
+++ b/src/cmd-app/package.json
@@ -7,7 +7,7 @@
     "exec": "ts-node src/index.ts"
   },
   "devDependencies": {
-    "@types/node": "^20.12.12",
+    "@types/node": "~20.12.12",
     "ts-node": "~10.9.2",
     "typescript": "~5.4.5"
   }
