--- a/src/react-app/package.json
+++ b/src/react-app/package.json
@@ -5,19 +5,15 @@
   "dependencies": {
     "bulma": "~1.0.0",
     "iconoir-react": "~7.7.0",
-    "pg": "~8.11.5",
-    "pg-hstore": "~2.3.4",
     "react": "~18.3.1",
     "react-dom": "~18.3.1",
     "react-router-dom": "~6.23.1",
     "react-scripts": "5.0.1",
-    "sequelize": "~6.37.3",
-    "uuid": "^9.0.1",
+    "uuid": "~9.0.1",
     "web-vitals": "~2.1.4",
     "zustand": "~4.5.2"
   },
   "scripts": {
-    "electron": "tsc src/Electron.ts --outDir .dist/electron && electron .dist/electron/Electron.js",
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
@@ -45,13 +41,11 @@
     "@testing-library/jest-dom": "~5.17.0",
     "@testing-library/react": "~13.4.0",
     "@testing-library/user-event": "~13.5.0",
-    "@types/electron": "~1.6.10",
     "@types/jest": "~27.5.2",
     "@types/node": "~16.18.97",
     "@types/react": "~18.3.2",
     "@types/react-dom": "~18.3.0",
-    "@types/uuid": "^9.0.8",
-    "electron": "~30.0.4",
+    "@types/uuid": "~9.0.8",
     "typescript": "~4.9.5"
   }
 }
