--- a/.gitignore
+++ b/.gitignore
@@ -104,8 +104,11 @@ release-artifacts-*
 .DS_Store
 .env.local
 .env.development.local
+.env.development
 .env.test.local
+.env.test
 .env.production.local
+.env.production
 
 npm-debug.log*
 yarn-debug.log*
