List partially implemented.

--- a/src/api-app/tsconfig.json
+++ b/src/api-app/tsconfig.json
@@ -7,7 +7,7 @@
     "lib": ["es6", "dom"],
     "outDir": "./dist",
     "strict": true,
-    "skipLibCheck": true
+    "skipLibCheck": true,
   },
   "include": [
     "src/**/*"
