--- a/src/api-app/package.json
+++ b/src/api-app/package.json
@@ -17,7 +17,8 @@
     "reflect-metadata": "~0.1.14",
     "sequelize": "~6.37.3",
     "uuid": "~9.0.1",
-    "v8n": "~1.5.1"
+    "v8n": "~1.5.1",
+    "ts-case-convert": "~2.0.7"
   },
   "devDependencies": {
     "@types/node": "~20.12.12",
