--- a/src/react-app/package.json
+++ b/src/react-app/package.json
@@ -10,7 +10,7 @@
     "react-dom": "~18.3.1",
     "react-router-dom": "~6.23.1",
     "react-scripts": "~5.0.1",
-    "ts-case-convert": "^2.0.7",
+    "ts-case-convert": "~2.0.7",
     "uuid": "~9.0.1",
     "web-vitals": "~2.1.4",
     "zustand": "~4.5.2"
