--- a/src/react-app/package.json
+++ b/src/react-app/package.json
@@ -4,9 +4,11 @@
   "private": true,
   "dependencies": {
     "bulma": "~1.0.0",
+    "date-fns": "^3.6.0",
     "iconoir-react": "~7.7.0",
     "immer": "~10.1.1",
     "react": "~18.3.1",
+    "react-datepicker": "^7.3.0",
     "react-dom": "~18.3.1",
     "react-router-dom": "~6.23.1",
     "react-scripts": "~5.0.1",
@@ -46,6 +48,7 @@
     "@types/jest": "~27.5.2",
     "@types/node": "~16.18.97",
     "@types/react": "~18.3.2",
+    "@types/react-datepicker": "^6.2.0",
     "@types/react-dom": "~18.3.0",
     "@types/uuid": "~9.0.8",
     "typescript": "~4.9.5"
