--- a/src/react-app/package.json
+++ b/src/react-app/package.json
@@ -3,15 +3,17 @@
   "version": "1.0",
   "private": true,
   "dependencies": {
+    "animate.css": "^4.1.1",
     "bulma": "~1.0.0",
-    "date-fns": "^3.6.0",
+    "date-fns": "~3.6.0",
     "iconoir-react": "~7.7.0",
     "immer": "~10.1.1",
     "react": "~18.3.1",
-    "react-datepicker": "^7.3.0",
+    "react-datepicker": "~7.3.0",
     "react-dom": "~18.3.1",
     "react-router-dom": "~6.23.1",
     "react-scripts": "~5.0.1",
+    "react-tooltip": "~5.27.1",
     "ts-case-convert": "~2.0.7",
     "uuid": "~9.0.1",
     "web-vitals": "~2.1.4",
@@ -48,7 +50,7 @@
     "@types/jest": "~27.5.2",
     "@types/node": "~16.18.97",
     "@types/react": "~18.3.2",
-    "@types/react-datepicker": "^6.2.0",
+    "@types/react-datepicker": "~6.2.0",
     "@types/react-dom": "~18.3.0",
     "@types/uuid": "~9.0.8",
     "typescript": "~4.9.5"
