--- a/src/api-app/package.json
+++ b/src/api-app/package.json
@@ -5,7 +5,7 @@
   "scripts": {
     "build": "tsc",
     "exec": "ts-node src/presenters/api/server.ts",
-    "start": "node --watch -r ts-node/register src/presenters/api/server.ts"
+    "start": "cross-env TZ='America/Mexico_City' node --watch -r ts-node/register src/presenters/api/server.ts"
   },
   "dependencies": {
     "@automapper/classes": "~8.8.1",
@@ -16,13 +16,14 @@
     "pg-hstore": "~2.3.4",
     "reflect-metadata": "~0.1.14",
     "sequelize": "~6.37.3",
+    "ts-case-convert": "~2.0.7",
     "uuid": "~9.0.1",
-    "v8n": "~1.5.1",
-    "ts-case-convert": "~2.0.7"
+    "v8n": "~1.5.1"
   },
   "devDependencies": {
     "@types/node": "~20.12.12",
     "@types/uuid": "~9.0.8",
+    "cross-env": "~7.0.3",
     "pino-pretty": "^11.1.0",
     "ts-node": "~10.9.2",
     "typescript": "~5.4.5"
