--- a/src/api-app/package.json
+++ b/src/api-app/package.json
@@ -11,7 +11,9 @@
     "@automapper/classes": "~8.8.1",
     "@automapper/core": "~8.8.1",
     "@fastify/cors": "~9.0.1",
+    "@fastify/multipart": "~8.3.0",
     "fastify": "~4.27.0",
+    "node-xlsx": "~0.24.0",
     "pg": "~8.11.5",
     "pg-hstore": "~2.3.4",
     "reflect-metadata": "~0.1.14",
@@ -24,7 +26,7 @@
     "@types/node": "~20.12.12",
     "@types/uuid": "~9.0.8",
     "cross-env": "~7.0.3",
-    "pino-pretty": "^11.1.0",
+    "pino-pretty": "~11.1.0",
     "ts-node": "~10.9.2",
     "typescript": "~5.4.5"
   }
