--- a/src/api-app/package.json
+++ b/src/api-app/package.json
@@ -12,6 +12,7 @@
     "@automapper/core": "~8.8.1",
     "@fastify/cors": "~9.0.1",
     "@fastify/multipart": "~8.3.0",
+    "exceljs": "~4.4.0",
     "fastify": "~4.27.0",
     "node-xlsx": "~0.24.0",
     "pg": "~8.11.5",
