--- a/src/api-app/package.json
+++ b/src/api-app/package.json
@@ -10,10 +10,11 @@
   "dependencies": {
     "@automapper/classes": "~8.8.1",
     "@automapper/core": "~8.8.1",
-    "@fastify/cors": "~9.0.1",
-    "@fastify/multipart": "~8.3.0",
+    "@fastify/cors": "~10.0.1",
+    "@fastify/jwt": "~9.0.1",
+    "@fastify/multipart": "~9.0.1",
     "exceljs": "~4.4.0",
-    "fastify": "~4.27.0",
+    "fastify": "~5.0.0",
     "node-xlsx": "~0.24.0",
     "pg": "~8.11.5",
     "pg-hstore": "~2.3.4",
