--- a/src/react-app/package.json
+++ b/src/react-app/package.json
@@ -8,7 +8,7 @@
     "animate.css": "~4.1.1",
     "bulma": "~1.0.0",
     "date-fns": "~3.6.0",
-    "file-saver": "^2.0.5",
+    "file-saver": "~2.0.5",
     "i18next": "~23.14.0",
     "iconoir-react": "~7.7.0",
     "immer": "~10.1.1",
@@ -30,7 +30,7 @@
     "@testing-library/jest-dom": "~5.17.0",
     "@testing-library/react": "~13.4.0",
     "@testing-library/user-event": "~13.5.0",
-    "@types/file-saver": "^2.0.7",
+    "@types/file-saver": "~2.0.7",
     "@types/jest": "~27.5.2",
     "@types/node": "~16.18.97",
     "@types/react": "~18.3.2",
