Tour component added.

--- a/src/react-app/package.json
+++ b/src/react-app/package.json
@@ -5,6 +5,7 @@
   "homepage": "/setepidsf",
   "dependencies": {
     "@react-pdf/renderer": "~4.0.0",
+    "@sjmc11/tourguidejs": "~0.0.17",
     "animate.css": "~4.1.1",
     "bulma": "~1.0.0",
     "date-fns": "~3.6.0",
